--- a/config-dots/solaar/config.json
+++ b/config-dots/solaar/config.json
@@ -57,6 +57,7 @@
   "4069:CEE33068": {
     "_modelId": "B01940690000",
     "_name": "Wireless Mouse MX Master 2S",
+    "_serial": "CEE33068",
     "_unitId": "59DDF0CC",
     "divert-keys": {
       "195": 0,
@@ -66,13 +67,15 @@
       "83": 0,
       "86": 0
     },
-    "dpi": 3000,
+    "dpi": "3000",
+    "dpi-sliding": 0,
     "gesture2-gestures": {
       "45": false,
       "46": false
     },
     "hires-smooth-invert": false,
     "hires-smooth-resolution": true,
+    "mouse-gestures": 0,
     "reprogrammable-keys": {
       "195": 195,
       "196": 196,
@@ -84,5 +87,5 @@
     },
     "smart-shift": 50
   },
-  "_version": "1.0.4"
+  "_version": "1.0.6"
 }
