Set i3 display inputs dynamically

--- a/i3/config
+++ b/i3/config
@@ -39,9 +39,15 @@ set $ws18 "18"
 set $ws19 "19"
 set $ws20 "20"
 
-set $laptopMon eDP-1
-set $wsLeftMon DP-1-2
-set $wsRightMon DP-2
+
+# Xresources settings
+set_from_resource $laptopMon i3.output.0.name	eDP-1-1
+set_from_resource $wsLeftMon i3.output.1.name	$output0
+set_from_resource $wsRightMon i3.output.2.name	$output1
+
+# set $laptopMon eDP-1-1
+# set $wsLeftMon DP-1-1-2
+# set $wsRightMon DP-1-2
 
 workspace $ws1 output $laptopMon
 workspace $ws2 output $laptopMon
