--- a/i3/config
+++ b/i3/config
@@ -41,7 +41,7 @@ set $ws20 "20"
 
 
 # Xresources settings
-set_from_resource $laptopMon i3.output.0.name	eDP-1-1
+set_from_resource $laptopMon i3.output.0.name	eDP-1
 set_from_resource $wsLeftMon i3.output.1.name	$output0
 set_from_resource $wsRightMon i3.output.2.name	$output1
 
