--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -61,6 +61,7 @@ set-option -g automatic-rename on
 set -g status-bg black
 set-window-option -g window-status-current-format '#[fg=white,bold]** #{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(echo "#{pane_current_path}" | rev | cut -d'/' -f-3 | rev) #[fg=white]**|'
 set-window-option -g window-status-format '#[fg=white,bold]#{window_index} #[fg=green]#{pane_current_command} #[fg=blue]#(echo "#{pane_current_path}" | rev | cut -d'/' -f-3 | rev) #[fg=white]|'
+set -g status-right "#{?window_zoomed_flag,[Z],} | %H:%M %d-%b"
 
 
 # Plugins
