--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -55,6 +55,18 @@ set-option -g status-interval 5
 set-option -g automatic-rename on
 # set-option -g automatic-rename-format '#{s|/local/home/snellin/workspace|~|:pane_current_path}':
 
+###  Set Pane Border visiblity
+# Set the color of the inactive pane borders
+set -g pane-border-style "fg=colour238"
+# Set the color of the active pane border
+set -g pane-active-border-style "fg=colour51"
+
+## Set active and inactive windows to different colors
+set -g window-active-style bg="#15191e"     
+set -g window-style bg="#3f3f3f"     
+# set -g window-style bg="#30353bff"          
+
+set-option -g set-titles on
 
 
 # Status Bar 
