--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -50,6 +50,9 @@ bind -n M-u attach-session -t . -c '#{pane_current_path}'
 # Disable mouse 
 set -g mouse off
 
+# Enable mouse
+# setw -g mouse on
+
 # Set window name to current Dir
 set-option -g status-interval 5
 set-option -g automatic-rename on
